style.css
*, *::before, *::after {
    box-sizing: border-box;
}


.layout{
    display: flex;
    justify-content: space-around;
}
.container{
    max-width: 80%;
    margin: 0 auto;
    background-color: #fff;
    padding: 1em;
    border-radius: 15px;

}

.qr-img{
    max-width: 100%;
    border-radius: 10px;

}

.big-container{
    width: 90%;
    margin: 0 auto;
}
.qr-comp{
    max-width: 375px;
    border-radius: 15px;
    background-color: #fff;
    padding: 1em;
    box-shadow: 2px 8px 16px 0px rgba(0,0,0,0.2);
}
/* miss me with BEM, all my homies hate BEM */
body{
    background-color: hsl(212, 45%, 89%);
    display: flex;
    flex-flow: column;
    justify-content: space-evenly;
    padding: 1em 0;
}

article{
    font-family: Outfit;
    text-align: center;
}

h1{
    font-weight: 700;
}

p{
    font-weight: 400;
    color: hsl(220, 15%, 55%);
}

.attribution{
    font-family: Outfit;
    margin: 0 auto;
    text-align: center;
   margin-top: 1em;
}

.flex-vh-center{
     /* forgive me Lord KP, for i have viewported  */
     height: 100vh;
    display: flex;
    flex-flow: column;
    justify-content: center;
}
@media (min-width:1440px){
    body{
        background-color: #fff;
    }
     .big-container{
        background-color: hsl(212, 45%, 89%) ;
        width: 85%;
        padding: 6em 8em;
        margin: 5em auto;
        box-shadow: 2px 8px 16px 0px rgba(0,0,0,0.2);
     }
}

